--- a/style.css
+++ b/style.css
@@ -6,16 +6,16 @@ html {
 }
 body {
     overflow-x: hidden;
-    padding: 2em;
+    /* padding: 2em; */
     background-color: #1f1f1f;
     color: azure;
     font-family: sans-serif;
 }
 .main-header{
     font-family: sans-serif;
-    font-size:30px;
+    font-size:10px;
     margin: 0;
-    padding: 56px;
+    padding: 1%;
     border-radius: 24px;
     background-repeat: no-repeat;
     background-position: 0 50%;
