--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
-/* @tailwind components;
-@tailwind utilities; */
+@tailwind components;
+@tailwind utilities;
 
 html {
     overflow-x: hidden;
+}
+h1{
+    font-size: 32px;
 }
 body {
     overflow-x: hidden;
