--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@ h1{
 }
 @media (max-width: 768px) {
     h1{
-        font-size: 10px;
+        font-size: 12px;
     }
 }
 @media (max-width: 1000px) {
     h1{
-        font-size: 12px;
+        font-size: 16px;
     }
 }
 body {
@@ -46,14 +46,23 @@ body {
 #image-description {
    padding:5%;
 } 
-#nasa-logo {
-    width:8%;
-    height: auto;
-}
+
 #nasa-image {
     background-repeat: no-repeat;
     background-position: 50%;
     background-size: cover;
+}
+@media (max-width: 768px) {
+    #nasa-logo {
+        width:30%;
+        height: auto;
+    }
+}
+@media (max-width: 1000px) {
+    #nasa-logo {
+        width:40%;
+        height: auto;
+    }
 }
 
 .search-button {
