--- a/style.css
+++ b/style.css
@@ -14,12 +14,12 @@ h1{
 }
 @media (max-width: 1000px) {
     h1{
-        font-size: 24px;
+        font-size: 32px;
     }
 }
 body {
     overflow-x: hidden;
-    /* padding: 2em; */
+    padding: 2em;
     background-color: #1f1f1f;
     color: azure;
     font-family: sans-serif;
