--- a/style.css
+++ b/style.css
@@ -2,127 +2,105 @@
 @tailwind utilities;
 
 html {
-    overflow-x: hidden;
-}
-h1{
-    font-size: 56px;
-}
-@media (max-width: 768px) {
-    h1{
-        font-size: 16px;
-    }
-}
-@media (max-width: 1000px) {
-    h1{
-        font-size: 32px;
-    }
+  overflow-x: hidden;
 }
 body {
-    overflow-x: hidden;
-    padding: 2em;
-    background-color: #1f1f1f;
-    color: azure;
-    font-family: sans-serif;
+  background-color: #1f1f1f;
+  color: azure;
+  font-family: sans-serif;
+  overflow-x: hidden;
 }
-.main-header{
-    font-family: sans-serif;
-    font-size:10px;
-    margin: 0;
-    padding: 1%;
-    border-radius: 24px;
-    background-repeat: no-repeat;
-    background-position: 0 50%;
-    background-size: cover;
-    background-image: url(https://lh3.googleusercontent.com/U8dSUmCjiqUZmZoCxzBZ5oGBCqCVipJvghZZDUfRgErjMa_UKYWEAU4TwlArCrW_TLDzfuIE08tirIROhJ8OZDsFZf8DK4p7pam74PGvtqBiE0ES2gI=w2400-rj);
-
-    /* background-image: url(https://upload.wikimedia.org/wikipedia/commons/8/80/Backgorund.gif); */
+h1 {
+  font-size: 20px;
+}
+.main-header {
+  font-family: sans-serif;
+  margin: 0;
+  padding: 3%;
+  border-radius: 24px;
+  background-repeat: no-repeat;
+  background-position: 0 50%;
+  background-size: cover;
+  background-image: url(https://lh3.googleusercontent.com/U8dSUmCjiqUZmZoCxzBZ5oGBCqCVipJvghZZDUfRgErjMa_UKYWEAU4TwlArCrW_TLDzfuIE08tirIROhJ8OZDsFZf8DK4p7pam74PGvtqBiE0ES2gI=w2400-rj);
+  /* background-image: url(https://upload.wikimedia.org/wikipedia/commons/8/80/Backgorund.gif); */
 }
 
 .sub-title {
-    font-size: 0.5em;
-    color:rgb(158, 121, 121);
+  font-size: 0.5em;
+  color: rgb(158, 121, 121);
 }
 
 #image-description {
-   padding:5%;
-} 
+  padding: 5%;
+}
 
 #nasa-image {
-    background-repeat: no-repeat;
-    background-position: 50%;
-    background-size: cover;
-}
-@media (max-width: 768px) {
-    #nasa-logo {
-        width:20%;
-        height: auto;
-    }
-}
-@media (max-width: 1000px) {
-    #nasa-logo {
-        width:25%;
-        height: auto;
-    }
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: cover;
 }
 
 .search-button {
-    position: flex;
-    background-color: white;
-    color: rgb(0, 0, 0);
-    padding-left: 13px;
-    padding-right: 13px;
+  position: flex;
+  background-color: white;
+  color: rgb(0, 0, 0);
+  padding-left: 13px;
+  padding-right: 13px;
 }
 .search-button:hover {
-    background-color: rgb(120, 146, 223);
-    transition: .2s;
+  background-color: rgb(120, 146, 223);
+  transition: 0.2s;
 }
 .one {
-    transform: translate3d(0,0,0);
-    display: block;
-    overflow-x: auto;
-    scrollbar-width: none;
-    position: relative;
-    white-space: nowrap;
+  transform: translate3d(0, 0, 0);
+  display: block;
+  overflow-x: auto;
+  scrollbar-width: none;
+  position: relative;
+  white-space: nowrap;
 }
 
 .two {
-    margin-top: 16px;
-    min-height: auto;
-    padding: 0 20px 16px;
-    min-height: 52px;
-    padding: 3px 0 6px;
-} 
+  margin-top: 16px;
+  min-height: auto;
+  padding: 0 20px 16px;
+  min-height: 52px;
+  padding: 3px 0 6px;
+}
 
 .three {
-    padding-right: 8px;
+  padding-right: 8px;
 }
 /* width */
 ::-webkit-scrollbar {
-    width: 15px;
+  width: 15px;
 }
-  
+
 /* Track */
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px #15418C;
-    border-radius: 10px;
+  box-shadow: inset 0 0 5px #15418c;
+  border-radius: 10px;
 }
-  
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: yellow;
-    border-radius: 10px;
+  background: yellow;
+  border-radius: 10px;
 }
 
 .gallery-image {
-    width:  300px;
-    height: 300px;
-    object-fit: cover;  
-    transition: all .5s ease;
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  transition: all 0.5s ease;
 }
 
 .gallery-image:hover {
-    width: 400px;
-    height: 400px;
+  width: 400px;
+  height: 400px;
 }
 
-/* Start https://www.cursors-4u.com */ * {cursor: url(https://cur.cursors-4u.net/nature/nat-7/nat606.cur), auto !important;} /* End https://www.cursors-4u.com */
+/* Start https://www.cursors-4u.com */
+* {
+  cursor: url(https://cur.cursors-4u.net/nature/nat-7/nat606.cur), auto !important;
+} /* End https://www.cursors-4u.com */
